# boatrace-papertrade

./: .gitignore  README.md  papertrade.cmd  pyproject.toml  requirements.txt
.github/workflows/: settle.yml  sweep.yml
boatrace/: backtest.py  cloud.py  dataset.py  download.py  odds.py  ordermodel.py  papertrade.py  parse.py  predict.py  stats.py  train.py  webapp.py
docs/: data.json  index.html
state/: beforeinfo.csv  bets.csv  checked.csv  model.pkl  racer_stats.csv
state/odds/: 2026-07.csv
