[project]
name = "gamble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "flask>=3.1.3",
    "lhafile>=0.3.1",
    "lightgbm>=4.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]
